--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
